--- a/Html and css Tmplet 2/satyl.css
+++ b/Html and css Tmplet 2/satyl.css
@@ -18,7 +18,7 @@ html {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: rgb(179, 171, 171);
+    background-color: rgb(242, 240, 240);
 }
 
 ul {
@@ -26,7 +26,7 @@ ul {
 }
 
 .container {
-    padding-left: 15px;
+    padding-left:  15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
@@ -53,23 +53,57 @@ ul {
 }
 
 nav {
-    color: wheat;
+color: white;
+}
+.section{
+padding: 100px;
+}
+.main-heading {
+    text-align: center;
 }
 
-.main-heading {}
+.main-heading h2 {
+    font-weight:normal;
+    font-size:40px ;
+    position: relative;
+    margin-bottom: 70px;
+    text-transform:uppercase;
+}
 
-.nain-heading h2 {}
-
-.nain-heading h2::before {
+.main-heading h2::before {
     content: '';
+    left: 50%;
+    position: absolute;
+    height: 3px;
+    width: 120px;
+    transform: translateX(-50%);
+    bottom: -25px;
+    background-color: #333;
+    
 
 }
 
-.nain-heading h2::after {
+.main-heading h2::after {
     content: '';
+    left: 50%;
+    position: absolute;
+    transform: translateX(-50%);
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    border: 3px solid #333;
+    bottom: -34px;
+    background-color: white;
 }
 
-.nain-heading p {}
+.main-heading p {
+    width: 500px;
+    margin: 0 auto 100px;
+    max-width: 100%;
+    line-height: 2;
+    color: #999;
+}
+
 
 header {
     position: absolute;
@@ -280,4 +314,33 @@ header nav .form i {
 .landing .bulkets li.active {
     background-color: var(--transparent-color);
     border-color: var(--transparent-color);
+}
+
+
+.sectior{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+@media (min-width:768px) {
+    .sectior .section-contont{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(450px , 1fr));
+        grid-column-gap: 40px;
+        grid-row-gap:60px ;
+    }
+}
+
+.sectior .srv-box {
+    display: flex;
+}
+.sectior .srv-box i{
+    margin-right: 50px;
+}
+.sectior .srv-box h3{
+    margin-bottom: 30px;
+    color: var(--main-color);
+}
+.sectior .srv-box p{
+    line-height: 2;
+    color: #777;
 }
